# datalake-vis

./: .gitignore  README.md  datalake-vis-pandas-playground.ipynb  datalake-vis-pandas.ipynb  datalake-vis.ipynb  pyproject.toml
frontend/: datalake-vis-frontend.py
frontend/.streamlit/: config.toml
frontend/frontend-data/: animal_state_year.json  animal_tag_data_b.json  animal_tag_data_b_new.json  mine_a.json  mine_b.json  prescribing_b.json  prescribing_b_final.json  prescribing_b_top50.json  prescribing_state.json  prescribing_state_year.json
src/datalake_vis/: aggr.py  col_vis_plan.py  column.py  data_types.py  series.py  table.py  text_converter.py  util_functions.py  utils.py
src/datalake_vis/vis_instance/: basic_vis_instance.py  interface.py  opt_vis_instance.py
test_bash_command/: test_basic_ind.sh  test_basic_merge.sh  test_lakebench.sh  test_opt_perf.sh  test_opt_stats.sh  test_scalability_100.sh  test_scalability_100_top_10.sh  test_scalability_100_top_100.sh  test_scalability_100_top_20.sh  test_scalability_100_top_5.sh  test_scalability_100_top_50.sh  test_scalability_20.sh  test_scalability_40.sh  test_scalability_60.sh  test_scalability_80.sh
tests/: conftest.py  test_basic_complete.py  test_opt_perf_complete.py  test_opt_stats_complete.py
utils/: plot_exp_data.py  preprocess.py
