[tool.poetry]
name = "datalake-vis"
version = "0.1.0"
description = ""
authors = ["yihao <yihao@megagon.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.2"
pandas = "2.0.3"
networkx = "3.1"
matplotlib = "^3.7.5"
gensim = "4.3.3"
nltk = "^3.8.1"
scipy = "^1.13.0"
pytest = "^7.4.4"
scikit-learn = "^1.5.1"
streamlit = "^1.38.0"
plotly = "^5.24.1"
# pyemd = "^1.0.0"
# setuptools = "^72.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.pytest.ini_options]
pythonpath = "src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
